# ent

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/ent/: cli.py  util.py
src/ent/lib/: action.py  domain.py  task.py
tests/: test_domain.py
tests/fixtures/: transcript.csv
