[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ent"
version = "0.0.1"
readme = "README.md"
requires-python = "~=3.12"
classifiers = [
    "Programming Language :: Python :: 3"
]

dependencies = [
]

[project.optional-dependencies]
dev = [
    "build",
    "mypy ~=1.13",
    "pdoc ~=14.7",
    "pre-commit ~=3.8",
    "pytest ~=8.3",
    "ruff ~=0.6",
]

[tool.setuptools.package-data]
"ent" = ["py.typed"]

[tool.ruff]
line-length = 110
